--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/hjmorrow23/Recipe-App#readme",
   "devDependencies": {
+    "angular": "^1.6.4",
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
     "gulp-minify-css": "^1.2.4",
