--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "angular": "^1.6.4",
     "browser-sync": "^2.18.8",
+    "express": "^4.15.2",
     "gulp": "^3.9.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^3.0.0",
